--- a/dubai.html
+++ b/dubai.html
@@ -23,7 +23,9 @@
             <ul class="dropdown-menu bg-dark">
               <li><a id="a-header" class="dropdown-item" href="#scrollspyHeading1">Thèmes des parcs</a></li>
               <li><a id="a-header" class="dropdown-item" href="#scrollspyHeading2">Ski intérieur</a></li>
-              <li><a id="a-header"class="dropdown-item" href="#scrollspyHeading3">Haunted Hotel</a></li>
+              <li><a id="a-header"class="dropdown-item" href="#scrollspyHeading3">Hôtel 7 étoiles</a></li>
+              <li><a id="a-header"class="dropdown-item" href="#scrollspyHeading3">Ile Jumeirah</a></li>
+
             </ul>
           </li>
   
@@ -49,7 +51,6 @@
 
         <div id="carouselExampleFade" class="carousel slide" data-bs-touch="false" >
           <div class="carousel-inner centered vertical-center">
-
             <!-- IMAGE RATIO 16:9 -->
 
             <div class="card mb-3 fs-2 text-primary carousel-item active centered width-80">
@@ -62,17 +63,15 @@
                 </div>
             </div>
 
-
             <div class="card fs-2 text-primary carousel-item width-80 centered">
               <img src="img/dubai/caption.jpg" class="centered width-100">
               <div class="card-body">
                 <h2 class="card-title text-danger">Piste de ski intérieure</h2>
                 <p class="card-text">Mall of the Emirates, Dubai<br>+971 800 6636255</p>
 
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                <a href="https://www.skidxb.com/" class="btn btn-primary fs-2">Go to official website</a>
               </div>
             </div>
-
 
             <div class="card fs-2 text-primary carousel-item width-80 centered">
               <img src="img/dubai/burj-al-arab-profile-exterior_6-4_landscape.jpg" class="centered width-100">
@@ -80,10 +79,9 @@
                 <h2 class="card-title text-danger">Hotel 7 étoiles</h2>
                 <p class="card-text">Burj El Arab, Dubai<br>+971 4 301 7777</p>
 
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                <a href="https://insideburjalarab.com/en" class="btn btn-primary fs-2">Go to official website</a>
               </div>
             </div>
-
 
             <div class="card fs-2 text-primary carousel-item width-80 centered">
               <img src="img/dubai/dubai-palm-island-1.jpg" class="centered width-100">
@@ -91,10 +89,9 @@
                 <h2 class="card-title text-danger">Ile artificielle</h2>
                 <p class="card-text">Palm Jumeirah, Dubai<br>+971 4 455 9988</p>
 
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                <a href="https://www.jumeirah.com/en" class="btn btn-primary fs-2">Go to official website</a>
               </div>
             </div>
-
 
             <button id="carousel-btn" class="carousel-control-prev bg-dark" style="margin-left: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -114,7 +111,7 @@
       <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example bg-dark" tabindex="0">
    
         <!-- IMAGE RATIO 2:1 -->
-        <h3 id="scrollspyHeading1">Worls of Adventure - Thèmes</h3>
+        <h3 id="scrollspyHeading1">Worlds of Adventure - Thèmes</h3>
         <p>
           <div id="img-park">
             <img src="img/dubai/dropdown/parks/spiderman.webp">
@@ -166,10 +163,39 @@
           </ol>
         </p>
 
+        <h3 id="scrollspyHeading3">Hotel Burj El Arab</h3>
+          <ol id="rooms-list">
+            <li>
+              <h4>Suite Royale</h4>
+              <img src="img/dubai/dropdown/hotel/most-expensive-suite-burj-al-arab-07.webp">
+            </li>
+            <li>
+              <h4>Suite sous-marine</h4>
+              <img src="img/dubai/dropdown/hotel/0b38d1e04032890d171c0286a6914dd0.jpg">
+            </li>
+          </ol>
+
+
+        <h3 id="scrollspyHeading2">Ile Jumeirah</h3>
+        <ol id="jumeirah">
+          <li>
+            <h4>Hotel Atlantis</h4>
+            <img src="img/dubai/dropdown/ile/ezgif.com-gif-maker.jpg">
+          </li>
+          <li>
+            <h4>Parc aquatique Atlantis Aquaventure</h4>
+            <img src="img/dubai/dropdown/ile/Aquaventure Waterpark 1.jpg">
+          </li>
+          <li>
+            <h4>Aquarium The Lost Chamber</h4>
+            <img src="img/dubai/dropdown/ile/rdhf1qrckuxmdg9vuzyn.jpg">
+          </li>
+        </ol>
+
         <h3 id="scrollspyHeading3">About</h3>
         <div id="about">
           <p>
-            Dubai is a city and emirate in the United Arab Emirates known for luxury shopping, ultramodern architecture and a lively nightlife scene. Burj Khalifa, an 830m-tall tower, dominates the skyscraper-filled skyline. At its foot lies Dubai Fountain, with jets and lights choreographed to music. On artificial islands just offshore is Atlantis, The Palm, a resort with water and marine-animal parks.<br>
+            Dubaï, rarement DoubaïNote 1 (en arabe : دبي / Dubayy, /dʊ.ˈbajj/) est la première ville des Émirats arabes unis (devant la capitale fédérale Abou Dabi). Située sur le golfe Persique, elle est capitale de l'émirat de Dubaï, et compte plus de trois millions d'habitants. Elle forme, avec les villes de Charjah, Ajman et Oumm al Qaïwaïn, elles-mêmes capitales de leurs émirats respectifs, une agglomération qui dépasse 3,5 millions d'habitants en 2022. Dubaï est également le premier port du pays.
           </p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722913.2542014333!2d54.992393899146386!3d25.124022704280925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43496ad9c645%3A0xbde66e5084295162!2sDubai%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sbe!4v1666267280627!5m2!1sen!2sbe" width="100%" height="70%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
