--- a/london.html
+++ b/london.html
@@ -11,71 +11,134 @@
     <link href="style.css" rel="stylesheet">
   
   </head>
-  <body class="bg-dark padding-50" >
-    <main class="bg-secondary padding-50">
+  <body class="bg-dark" >
 
-      <nav class="centered">
-        <a href="dubai.html" class="text-light bg-dark" >Dubai</a>
-        <a href="pekin.html" class="text-light bg-dark">Pekin</a>
-        <a href="london.html" class="text-light bg-dark">London</a>
+    <header>
+      <!-- NAVBAR -->
+      <nav id="navbar-example2" class="navbar fixed-top bg-dark">
+        <ul class="nav nav-pills">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Infos</a>
+            <ul class="dropdown-menu bg-dark">
+              <li><a id="nav-header" class="dropdown-item" href="#scrollspyHeading1">Worlds of Adventure</a></li>
+              <li><a id="nav-header" class="dropdown-item" href="#scrollspyHeading2">Ski Dubai</a></li>
+            </ul>
+          </li>
+  
+          <li class="nav-item">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Contact</button>
+          </li>
+        </ul>
       </nav>
 
-        <div id="carouselExampleFade" class="carousel slide" data-bs-touch="false" >
-          <div class="carousel-inner centered vertical-center">
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
 
-            <div class="card mb-3 fs-2 text-primary carousel-item active centered width-80">
-                <img src="img/london/BP_190922_GettyImages-1425168699.webp" class="centered width-100">
-                <div class="card-body">
-                  <h5 class="card-title fs-1 fw-bold text-danger">Buckingham Palace</h5>
-                  <p class="card-text">London SW1A 1AA, United Kingdom<br>+44 303 123 7300</p>
-  
-                  <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+            <div class="modal-header">
+              <h1 class="modal-title" id="exampleModalLabel">Envoie ton message </h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+
+            <div class="modal-body">
+              <form>
+                <div>
+                  <label for="prenom" class="col-form-label">Ton prénom :</label>
+                  <input type="text" class="form-control" id="recipient-name">
                 </div>
+
+                <div>
+                  <label for="nom" class="col-form-label">Ton nom :</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+
+                <div>
+                  <label for="recipient-name" class="col-form-label">Ton e-mail :</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+
+                <div>
+                  <label for="message-text" class="col-form-label">Ton message:</label>
+                  <textarea class="form-control" id="message-text"></textarea>
+                </div>
+              </form>
             </div>
 
-            <div class="card fs-2 text-primary carousel-item width-80 centered">
-              <img src="img/london/the-temperate-house-credit-gareth-gardner-4-1.webp" class="centered width-100">
-              <div class="card-body">
-                <h5 class="card-title fs-1 fw-bold text-danger">Royal Botanic Gardens</h5>
-                <p class="card-text">Richmond, United Kingdom<br>+44 20 8332 5655</p>
-
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
-              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Send message</button>
             </div>
-
-            <div class="card fs-2 text-primary carousel-item width-80 centered">
-              <img src="img/london/westminster-abbey-640.jpg" class="centered width-100">
-              <div class="card-body">
-                <h5 class="card-title fs-1 fw-bold text-danger">Westminster Abbey</h5>
-                <p class="card-text">20 Deans Yd, London SW1P 3PA, United Kingdom<br>+44 20 7222 5152</p>
-
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
-              </div>
-            </div>
-
-            <div class="card fs-2 text-primary carousel-item width-80 centered">
-              <img src="img/london/big-ben-clock-change-640x360.jpg" class="centered width-100">
-              <div class="card-body">
-                <h5 class="card-title fs-1 fw-bold text-danger">Big Ben</h5>
-                <p class="card-text">London SW1A 0AA, United Kingdom<br>+44 20 7219 4272</p>
-
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
-              </div>
-            </div>
-
-            <button id="carousel-btn" class="carousel-control-prev bg-dark radius-50" style="margin-left: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button id="carousel-btn" class="carousel-control-next bg-dark radius-50" style="margin-right: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
 
           </div>
         </div>
+      </div>
+    </header>
+    
+    <main class="bg-primary">
+      <div id="top">
+        <nav id="nav-main">
+          <a href="dubai.html" class="text-light bg-dark" >Dubai</a>
+          <a href="pekin.html" class="text-light bg-dark">Pekin</a>
+          <a href="london.html" class="text-light bg-dark">London</a>
+        </nav>
+  
+          <div id="carouselExampleFade" class="carousel slide" data-bs-touch="false" >
+            <div class="carousel-inner centered vertical-center">
+              <div class="card fs-2 text-primary carousel-item active centered">
+                <img src="img/london/big-ben-clock-change-640x360.jpg" >
+                <div class="card-body">
+                  <h5 class="card-title fs-1 fw-bold text-danger">Big Ben</h5>
+                  <p class="card-text">London SW1A 0AA, United Kingdom<br>+44 20 7219 4272</p>
+  
+                  <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                </div>
+              </div>
+  
+              <div class="card mb-3 fs-2 text-primary carousel-item centered">
+                  <img src="img/london/BP_190922_GettyImages-1425168699.webp" >
+                  <div class="card-body">
+                    <h5 class="card-title fs-1 fw-bold text-danger">Buckingham Palace</h5>
+                    <p class="card-text">London SW1A 1AA, United Kingdom<br>+44 303 123 7300</p>
+    
+                    <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                  </div>
+              </div>
+  
+              <div class="card fs-2 text-primary carousel-item centered">
+                <img src="img/london/the-temperate-house-credit-gareth-gardner-4-1.webp" >
+                <div class="card-body">
+                  <h5 class="card-title fs-1 fw-bold text-danger">Royal Botanic Gardens</h5>
+                  <p class="card-text">Richmond, United Kingdom<br>+44 20 8332 5655</p>
+  
+                  <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                </div>
+              </div>
+  
+              <div class="card fs-2 text-primary carousel-item centered">
+                <img src="img/london/westminster-abbey-640.jpg" >
+                <div class="card-body">
+                  <h5 class="card-title fs-1 fw-bold text-danger">Westminster Abbey</h5>
+                  <p class="card-text">20 Deans Yd, London SW1P 3PA, United Kingdom<br>+44 20 7222 5152</p>
+  
+                  <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                </div>
+              </div>
+  
+              <button id="carousel-btn" class="carousel-control-prev bg-dark radius-50" style="margin-left: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button id="carousel-btn" class="carousel-control-next bg-dark radius-50" style="margin-right: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+  
+            </div>
+          </div>
+      </div>
 
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
