--- a/pekin.html
+++ b/pekin.html
@@ -11,71 +11,74 @@
     <link href="style.css" rel="stylesheet">
   </head>
 
-  <body class="bg-dark padding-50" >
-    <main class="bg-secondary padding-50">
+  <body class="bg-dark" >
+    <main class="bg-primary">
 
-      <nav class="centered">
-        <a href="dubai.html" class="text-light bg-dark" >Dubai</a>
-        <a href="pekin.html" class="text-light bg-dark">Pekin</a>
-        <a href="london.html" class="text-light bg-dark">London</a>
-      </nav>
-
-      <div id="carouselExampleFade" class="carousel slide" data-bs-touch="false" >
-        <div class="carousel-inner centered vertical-center">
-
-            <div class="card fs-2 text-primary carousel-item active width-80 centered">
-              <img src="img/pekin/great-wall.jpg" class="centered width-100">
-              <div class="card-body">
-                <h5 class="card-title fs-1 fw-bold text-danger">Great Wall of China</h5>
-                <p class="card-text">Huairou District, China, 101406<br>+86 10 6162 6022</p>
-
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
-              </div>
-            </div>
-
-            <div class="card mb-3 fs-2 text-primary carousel-item centered width-80">
-                <img src="img/pekin/1262645.avif" class="centered width-100">
+      <div id="top">
+        <nav>
+          <a href="dubai.html" class="text-light bg-dark" >Dubai</a>
+          <a href="pekin.html" class="text-light bg-dark">Pekin</a>
+          <a href="london.html" class="text-light bg-dark">London</a>
+        </nav>
+  
+        <div id="carouselExampleFade" class="carousel slide" data-bs-touch="false" >
+          <div class="carousel-inner">
+              <div class="card mb-3 fs-2 text-primary carousel-item active">
+                <img src="img/pekin/1262645.avif">
                 <div class="card-body">
                   <h5 class="card-title fs-1 fw-bold text-danger">Forbidden City</h5>
                   <p class="card-text">China, Beijing, 东城区景山前街4号 邮政编码: 100886<br>+86 10 8500 7938</p>
   
+                  <a href="https://en.dpm.org.cn/" class="btn btn-primary fs-2">Go somewhere</a>
+                </div>
+              </div>
+  
+              <div class="card fs-2 text-primary carousel-item">
+                <img src="img/pekin/great-wall.jpg">
+                <div class="card-body">
+                  <h5 class="card-title fs-1 fw-bold text-danger">Great Wall of China</h5>
+                  <p class="card-text">Huairou District, China, 101406<br>+86 10 6162 6022</p>
+  
+                  <a href="https://www.great-wallofchina.com/" class="btn btn-primary fs-2">Go somewhere</a>
+                </div>
+              </div>
+  
+  
+              <div class="card fs-2 text-primary carousel-item">
+                <img src="img/pekin/ncpa_0.jpg">
+                <div class="card-body">
+                  <h5 class="card-title fs-1 fw-bold text-danger">National Centre for the Performing Arts</h5>
+                  <p class="card-text">2 W Chang'an St, Xicheng District, China, 100031<br>+86 10 6655 0000</p>
+  
                   <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
                 </div>
-            </div>
-
-            <div class="card fs-2 text-primary carousel-item width-80 centered">
-              <img src="img/pekin/ncpa_0.jpg" class="centered width-100">
-              <div class="card-body">
-                <h5 class="card-title fs-1 fw-bold text-danger">National Centre for the Performing Arts</h5>
-                <p class="card-text">2 W Chang'an St, Xicheng District, China, 100031<br>+86 10 6655 0000</p>
-
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
               </div>
-            </div>
-
-            <div class="card fs-2 text-primary carousel-item width-80 centered">
-              <img src="img/pekin/Beijing_national_stadium.jpg" class="centered width-100">
-              <div class="card-body">
-                <h5 class="card-title fs-1 fw-bold text-danger">National Stadium</h5>
-                <p class="card-text">1 Guojiatiyuchang S Rd, Chaoyang, China, 100101<br>+86 10 8437 3008</p>
-
-                <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+  
+              <div class="card fs-2 text-primary carousel-item">
+                <img src="img/pekin/Beijing_national_stadium.jpg">
+                <div class="card-body">
+                  <h5 class="card-title fs-1 fw-bold text-danger">National Stadium</h5>
+                  <p class="card-text">1 Guojiatiyuchang S Rd, Chaoyang, China, 100101<br>+86 10 8437 3008</p>
+  
+                  <a href="www.imgworlds.com" class="btn btn-primary fs-2">Go somewhere</a>
+                </div>
               </div>
+  
+              <button id="carousel-btn" class="carousel-control-prev bg-dark radius-50" style="margin-left: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button id="carousel-btn" class="carousel-control-next bg-dark radius-50" style="margin-right: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+  
             </div>
-
-            <button id="carousel-btn" class="carousel-control-prev bg-dark radius-50" style="margin-left: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button id="carousel-btn" class="carousel-control-next bg-dark radius-50" style="margin-right: 3vw;" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-
-          </div>
+        </div>
       </div>
 
     </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
